--- a/Transcribe/Info.plist
+++ b/Transcribe/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>We need to analyse and transcribe your audio, we hope thats cool 💪🏻</string>
 </dict>
 </plist>
